kubernetes/manifests/deployment.yaml
# This is a simple deployment manifest for a containerized application
# https://kubernetes.io/docs/reference/kubernetes-api/workload-resources/deployment-v1/
apiVersion: apps/v1
kind: Deployment
metadata:
  name: my-awesome-app-manifest
  labels:
    app.kubernetes.io/name: my-awesome-app
    app.kubernetes.io/managed-by: manifest
spec:
  selector:
    matchLabels:
      app.kubernetes.io/name: my-awesome-app
      app.kubernetes.io/managed-by: manifest
  template:
    metadata:
      labels:
        app.kubernetes.io/name: my-awesome-app
        app.kubernetes.io/managed-by: manifest
    spec:
      containers:
        - name: app
          image: fernandoarteaga/my-awesome-app:latest
          ports:
            - name: http
              containerPort: 80
          resources:
            requests:
              memory: "64Mi"
              cpu: "50m"
            limits:
              memory: "128Mi"
              cpu: "100m"
      affinity:
        nodeAffinity:
          preferredDuringSchedulingIgnoredDuringExecution:
            - weight: 1
              preference:
                matchExpressions:
                  - key: vm-size
                    operator: In
                    values:
                      - small
            - weight: 100
              preference:
                matchExpressions:
                  - key: vm-size
                    operator: In
                    values:
                      - tiny
      tolerations:
        - key: vm-size
          operator: Equal
          value: small
          effect: NoSchedule
        - key: vm-size
          operator: Equal
          value: tiny
          effect: NoSchedule
