kubernetes/manifests/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: my-awesome-app-manifest
  labels:
    app.kubernetes.io/name: my-awesome-app
    app.kubernetes.io/managed-by: manifest
spec:
  selector:
    app.kubernetes.io/name: my-awesome-app
    app.kubernetes.io/managed-by: manifest
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
  type: NodePort
